# ray-tracer

./: Cargo.toml  README.md  test.yaml
src/: camera.rs  canvas.rs  color.rs  csg.rs  float.rs  geometry.rs  group.rs  intersections.rs  lib.rs  light.rs  main.rs  material.rs  object.rs  object_store.rs  patterns.rs  rays.rs  world.rs  yaml.rs
src/shapes/: bounds.rs  cube.rs  mod.rs  plane.rs  sphere.rs
