[package]
name = "ray-tracer"
version = "0.1.0"
authors = ["Felix Gruber <felgru@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.24.0"
image = "0.23.12"
approx = "0.4.0"
yaml-rust = "0.4.4"
