[package]
name = "ray-tracer"
version = "0.1.0"
authors = ["Felix Gruber <felgru@posteo.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.29.0"
image = "0.23.14"
approx = "0.5.0"
yaml-rust = "0.4.5"
