[package]
name = "ray-tracer"
version = "0.1.0"
authors = ["Felix Gruber <felgru@posteo.net>"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.30.1"
image = "0.24.1"
approx = "0.5.1"
yaml-rust = "0.4.5"
